--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-sdl(ms)-202511203-2차-완성(화면-수정-중)",
+  "name": "ai-sdl(ms)-202511203-3차-완성",
   "private": true,
   "version": "0.0.0",
   "type": "module",
