--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-sdl(ms)-202511203-3차-완성",
+  "name": "ai-sdl(ms)-202511204-4차-완료후-디자인-개선중",
   "private": true,
   "version": "0.0.0",
   "type": "module",
