--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-sdl(ms)-202511204-4차-완료후-디자인-개선중",
+  "name": "as1206-성취분석(학습-진단-리포트)",
   "private": true,
   "version": "0.0.0",
   "type": "module",
