--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "as1206-성취분석(학습-진단-리포트)",
+  "name": "as1207-완성-제작사-문구",
   "private": true,
   "version": "0.0.0",
   "type": "module",
