--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "as1213-완성-중등-앱-활용-방법",
+  "name": "as1215-완성-중등-핵심-단어-검색",
   "private": true,
   "version": "0.0.0",
   "type": "module",
